--- a/index.html
+++ b/index.html
@@ -4,23 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-css-boolando</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <!-- HEADER -->
     <header>
-        <div>
-            <ul>
-                <li><a href="#">Donna</a></li>
-                <li><a href="#">Uomo</a></li>
-                <li><a href="#">Bambini</a></li>
-            </ul>
+        <div class="header-container">
+            <div class="header-link">
+                <ul>
+                    <li><a href="#">Donna</a></li>
+                    <li><a href="#">Uomo</a></li>
+                    <li><a href="#">Bambini</a></li>
+                </ul>
+            </div>
+
+            <div><img class="header-logo" src="./images/img/boolean-logo.png" alt=""></div>
+
+            <div class="symbols">
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
+            </div>
         </div>
-
-        <div class="logo-header"></div>
-
-        <div class="symbols"></div>
     </header>
-    <main></main>
+
+    <!-- MAIN -->
+    <main>
+        <div class="card"><img src="./images/img/1.webp" alt=""></div>
+        <div class="card"><img src="./images/img/2.webp" alt=""></div>
+        <div class="card"><img src="./images/img/3.webp" alt=""></div>
+        <div class="card"><img src="./images/img/4.webp" alt=""></div>
+        <div class="card"><img src="./images/img/5.webp" alt=""></div>
+        <div class="card"><img src="./images/img/6.webp" alt=""></div>
+    </main>
     <footer></footer>
 </body>
 </html>
