--- a/index.html
+++ b/index.html
@@ -33,12 +33,67 @@
 
     <!-- MAIN -->
     <main>
-        <div class="card"><img src="./images/img/1.webp" alt=""></div>
-        <div class="card"><img src="./images/img/2.webp" alt=""></div>
-        <div class="card"><img src="./images/img/3.webp" alt=""></div>
-        <div class="card"><img src="./images/img/4.webp" alt=""></div>
-        <div class="card"><img src="./images/img/5.webp" alt=""></div>
-        <div class="card"><img src="./images/img/6.webp" alt=""></div>
+        <div class="container-cards products">
+            <div class="card">
+                <img src="./images/img/1.webp" alt="">
+                <p><span class="sale">-50%</span> <span class="green">Sostenibilità</span></p>
+                <i class="fa-solid fa-heart"></i>
+                <div class="descripption">
+                    <h6>Levi's</h6>
+                    <h4>RELAXED FIT TEE UNISEX</h4>
+                    <h6><span class="red">14,99 €</span> <span class="line"> 29,99 €</span></h6>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/img/2.webp" alt="">
+                <p><span class="sale">-30%</span></p>
+                <i class="fa-solid fa-heart"></i>
+                <div class="descripption">
+                    <h6>Guess</h6>
+                    <h4>ROSES TEE</h4>
+                    <h6><span class="red">20,99 €</span> 29,99 €</h6>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/img/3.webp" alt="">
+                <p><span class="sale">-30%</span></p>
+                <i class="fa-solid fa-heart"></i>
+                <div class="descripption">
+                    <h6>Come Zucchero Filato</h6>
+                    <h4>VOGLIA DI COLORI PASTELLO</h4>
+                    <h6><span class="red">129,99 €</span> 484,99€</h6>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/img/4.webp" alt="">
+                <p><span class="sale">-50%</span> <span class="green">Sostenibilità</span></p>
+                <i class="fa-solid fa-heart"></i>
+                <div class="descripption">
+                    <h6>Levi's</h6>
+                    <h4>TEE UNISEX</h4>
+                    <h6><span class="red">14,99 €</span> 29,99 €</h6>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/img/5.webp" alt="">
+                <i class="fa-solid fa-heart"></i>
+                <div class="descripption">
+                    <h6>Maya Deluxe</h6>
+                    <h4>STRIPE BODICE</h4>
+                    <h6><span class="red">99.99 €</span></h6>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./images/img/6.webp" alt="">
+                <p><span class="green">Sostenibiltà</span></p>
+                <i class="fa-solid fa-heart"></i>
+                <div class="descripption">
+                    <h6>Esprit</h6>
+                    <h4>MAGLIONE - BLACK</h4>
+                    <h6><span class="red">29,99 €</span></h6>
+                </div>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
