--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="container-cards products">
             <div class="card">
                 <img src="./images/img/1.webp" alt="">
+                <img class="img-hover" src="./images/img/1b.webp" alt="">
                 <p><span class="sale">-50%</span> <span class="green">Sostenibilità</span></p>
                 <i class="fa-solid fa-heart"></i>
                 <div class="descripption">
@@ -46,6 +47,7 @@
             </div>
             <div class="card">
                 <img src="./images/img/2.webp" alt="">
+                <img class="img-hover" src="./images/img/2b.webp" alt="">
                 <p><span class="sale">-30%</span></p>
                 <i class="fa-solid fa-heart"></i>
                 <div class="descripption">
@@ -56,6 +58,7 @@
             </div>
             <div class="card">
                 <img src="./images/img/3.webp" alt="">
+                <img class="img-hover" src="./images/img/3b.webp" alt="">
                 <p><span class="sale">-30%</span></p>
                 <i class="fa-solid fa-heart"></i>
                 <div class="descripption">
@@ -66,6 +69,7 @@
             </div>
             <div class="card">
                 <img src="./images/img/4.webp" alt="">
+                <img class="img-hover" src="./images/img/4b.webp" alt="">
                 <p><span class="sale">-50%</span> <span class="green">Sostenibilità</span></p>
                 <i class="fa-solid fa-heart"></i>
                 <div class="descripption">
@@ -76,6 +80,7 @@
             </div>
             <div class="card">
                 <img src="./images/img/5.webp" alt="">
+                <img class="img-hover" src="./images/img/5b.webp" alt="">
                 <i class="fa-solid fa-heart"></i>
                 <div class="descripption">
                     <h6>Maya Deluxe</h6>
@@ -85,6 +90,7 @@
             </div>
             <div class="card">
                 <img src="./images/img/6.webp" alt="">
+                <img class="img-hover" src="./images/img/6b.webp" alt="">
                 <p><span class="green">Sostenibiltà</span></p>
                 <i class="fa-solid fa-heart"></i>
                 <div class="descripption">
