--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="descripption">
                     <h6>Guess</h6>
                     <h4>ROSES TEE</h4>
-                    <h6><span class="red">20,99 €</span> 29,99 €</h6>
+                    <h6><span class="red">20,99 €</span><span class="line"> 29,99 €</span></h6>
                 </div>
             </div>
             <div class="card">
@@ -64,7 +64,7 @@
                 <div class="descripption">
                     <h6>Come Zucchero Filato</h6>
                     <h4>VOGLIA DI COLORI PASTELLO</h4>
-                    <h6><span class="red">129,99 €</span> 484,99€</h6>
+                    <h6><span class="red">129,99 €</span> <span class="line">484,99€</span></h6>
                 </div>
             </div>
             <div class="card">
@@ -75,7 +75,7 @@
                 <div class="descripption">
                     <h6>Levi's</h6>
                     <h4>TEE UNISEX</h4>
-                    <h6><span class="red">14,99 €</span> 29,99 €</h6>
+                    <h6><span class="red">14,99 €</span> <span class="line">29,99 €</span></h6>
                 </div>
             </div>
             <div class="card">
@@ -101,6 +101,29 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="container-footer">
+            <div class="footer-left">
+                <h4>Boolando s.r.l</h4>
+                <nav>
+                    <ul>
+                        <li><a href="#">Informazioni legali</a></li>
+                        <li><a href="#">Inormativa sulla privacy</a></li>
+                        <li><a href="#">Diritto di recesso</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-right">
+                <h5>trovaci anche su</h5>
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-pinterest"></i>
+                <i class="fa-brands fa-square-youtube"></i>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
